@@ -375,30 +375,50 @@ public class Mode
 		return indentRules;
 	} //}}}
 
-	//{{{ isElectricKey() method
-	public synchronized boolean isElectricKey(char ch)
+	//{{{ isElectricKey() methods
+	public boolean isElectricKey(char ch)
 	{
+		return isElectricKey(ch, "on"); 
+	}
+
+	/**
+	 * Is <code>ch</code> an electric key?
+	 * @param keysMode <code>String</code> taken from property
+	 * <code>electricKeysMode</code> controlled by user options.
+	 * If equal to <code>"brackets only"</code>
+	 * then only brackets are considered electric.
+	 */
+	public synchronized boolean isElectricKey(char ch, String keysMode)
+	{
+		if ("off".equals(keysMode))
+			return false;
+
 		if (electricKeys == null)
 		{
+			String prop = (String) getProperty("electricKeys");
+			electricKeys = ( prop == null ? "" : prop );
+
 			String[] props = {
 				"indentOpenBrackets",
-				"indentCloseBrackets",
-				"electricKeys"
+				"indentCloseBrackets"
 			};
 
 			StringBuilder buf = new StringBuilder();
 			for(int i = 0; i < props.length; i++)
 			{
-				String prop = (String) getProperty(props[i]);
+				prop = (String) getProperty(props[i]);
 				if (prop != null)
 					buf.append(prop);
 			}
-
-			electricKeys = buf.toString();
+			electricBrackets = buf.toString();
 		}
 
-		return (electricKeys.indexOf(ch) >= 0);
-	} //}}}
+		boolean isElectric1 = (electricBrackets.indexOf(ch) >= 0);
+		boolean isElectric2 = (!"brackets only".equals(keysMode)
+			&& (electricKeys.indexOf(ch) >= 0 ));
+		return isElectric1 || isElectric2;
+	}
+	//}}}
 
 	//{{{ initIndentRules() method
 	private void initIndentRules()
@@ -523,7 +543,15 @@ public class Mode
 	private Pattern filepathRE;
 	protected TokenMarker marker;
 	private List<IndentRule> indentRules;
+	/** Electric keys loaded directly from rule properties.
+	  * Filled at first access. */
 	private String electricKeys;
+	/** Brackets treated also as electric keys. Filled at first access.
+	  * The 2 electric parts are separated because user setting
+	  * <code>electricKeysMode</code> may change after the mode is loaded.
+	  * If the user wants only braces, we must have them separately.
+	  */
+	private String electricBrackets;
 	private boolean ignoreWhitespace;
 	//}}}
 }
